@@ -22,9 +22,9 @@ use Catalyst::Test 'TrueTestApp';
    is ($empty_cache_test, '', 'test cache is empty');
    my $empty_cache_key = get('/peek_cache_key');
    is ($empty_cache_key, '', 'test cache is empty');
-   get('/test');
+   is(get('/test'), 'we cached your stuff', 'request works');
    content_like('/peek_cache_test',qr{we cached your stuff},'something got cached');
-   get('/test_key');
+   is(get('/test_key'), 'we cached your stuff with your neat key', 'keyed request works');
    content_like('/peek_cache_key',qr{we cached your stuff with your neat key},'something got cached with a custom key');
 };
 done_testing;
